<resources>
    <string name="app_name">Splitie</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_the_email_address_you_used_to_register_to_receive_a_link_to_reset_your_password">Please enter the email address you used to register to receive a link to reset your password.</string>
    <string name="input_your_email_address">Input your email address</string>
    <string name="send_password_reset_link">Send password reset link</string>
    <string name="back_to_login">Back to login</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="profile_user">Profile user</string>
    <string name="user_xx">User xx</string>
    <string name="qr_code">QR CODE</string>
    <string name="tap_to_upload_qr_code">Tap to upload QR Code</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="join_a_member_join_now">Join a member ? Join now</string>
    <string name="split_next">Split Next</string>
    <string name="friend">Friend</string>
    <string name="see_more">See More</string>
    <string name="group">Group</string>
    <string name="see_more_text">See More</string>
    <string name="spilt_the_bill">Spilt the bill</string>
    <string name="recent_bill">Recent Bill</string>
    <string name="owe">Owe</string>
    <string name="register">Register</string>
    <string name="username_txt">Username</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_txt">Password</string>
    <string name="register_txt">REGISTER</string>
    <string name="register_text">Register</string>
    <string name="username_text">Username</string>
    <string name="name_text">Name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="password_text">Password</string>
    <string name="register_btn_text">REGISTER</string>
</resources>