<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/back_to_homepage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgEditProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/profile_user"
        app:shapeAppearanceOverlay="@style/CircleImageStyle"
        app:strokeColor="#DDDDDD"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@android:drawable/ic_menu_camera"
        android:background="@drawable/bg_circle_white"
        android:padding="5dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/imgEditProfile"
        app:layout_constraintEnd_toEndOf="@id/imgEditProfile" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_xx"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imgEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgQrCode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="#F5F5F5"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/qr_code"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_upload_qr_code"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/imgQrCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

